--- a/rootdir/etc/init.xiaomi.device.rc
+++ b/rootdir/etc/init.xiaomi.device.rc
@@ -64,6 +64,10 @@ on property:sys.boot_completed=1
     chown cameraserver audio  /data/vendor/camera/golden_rear_dc_cal_wt_ov13b10_gc02m1hw.bin
     chmod 0777 /data/vendor/camera/golden_rear_dc_cal_wt_ov13b10_gc02m1hw.bin
 
+    # Enable ZRAM
+    swapon_all /vendor/etc/fstab.qcom
+    write /proc/sys/vm/swappiness 100
+
 # FM
 on property:hw.fm.init=*
     write /sys/devices/virtual/fm/fm_lan_enable/lan_enable ${hw.fm.init}
